2014-06-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.h (N_IsDir): New flag.
	* info/dir.c (build_dir_node): Set N_IsDir on flags for return node.
	* info/info-utils.c (scan_reference_marker): Split out from
	scan_node_contents.
	(scan_reference_label): Arguments changed.  Don't create REFERENCE
	object.  Don't skip whitespace at start of label.  Return value says
	whether the syntax was valid.
	(scan_reference_target) Look at flags field of NODE to tell
	if it is an index node.  Look at type field of REFERENCE to
	tell whether it is a menu entry.  [preprocess-nodes=On]: Display menu
	item descriptions on same line if there is space.
	(scan_node_contents): Call info_new_reference.  Check if reference
	text was contained within parentheses.

2014-06-08  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (Raw Formatter Commands): fix grammar.

	* doc/info.texi (Help-^L): "mode line", "screenful",
	stand-alone and Emacs Info both use the mode line.
	Use x instead of weird C-x 0 to get rid of help msg.
	
	* doc/info-stnd.texi: "mode line", "screenful".

2014-06-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (gc_file_buffers_and_nodes): Check equality with
	'filename' field as well as 'fullpath' field of FILE_BUFFER.

	* info/echo-area.c (restore_calling_window): Remove handling of window
	pagetops.  Don't call display update functions.  Remove disabled code.
	(ea_possible_completions): Remove handling of window pagetops.

	* info/window.c (window_make_window): Don't call window_adjust_pagetop.
	It's possible that the new window could be closed without the old
	window having been selected in the meantime, and this would leave the
	point where it was.
	* info/session.c (info_next_window, info_prev_window): Call
	window_adjust_pagetop on newly active window.
	* info/window.c (window_change_window_height): Don't call
	window_adjust_pagetop.
	(window_set_node_of_window): Don't call window_adjust_pagetop if there
	is no node.
